force-app/zurich-base/main/default/objects/EmailsIBA__c/EmailsIBA__c.object-meta.xml
<CustomObject>
    <description>This entity will be used to store all transactional emails sent by IBA.</description>
    <label>Email IBA</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Email IBA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails IBA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>