force-app/zurich-base/main/default/objects/EmailsIBA__c/fields/CustomerNum__c.field-meta.xml
<CustomField>
    <fullName>CustomerNum__c</fullName>
    <label>Customer Num</label>
    <length>80</length>
    <type>Text</type>
</CustomField>