force-app/zurich-base/main/default/objects/EmailsIBA__c/fields/SendDate__c.field-meta.xml
<CustomField>
    <fullName>SendDate__c</fullName>
    <description>Email sent date</description>
    <label>Fecha envío</label>
    <type>DateTime</type>
</CustomField>