force-app/zurich-base/main/default/objects/EmailsIBA__c/fields/SentTo__c.field-meta.xml
<CustomField>
    <fullName>SentTo__c</fullName>
    <description>Email recipient</description>
    <label>Enviado a</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Emails IBA</relationshipLabel>
    <relationshipName>EmailsIBA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>