force-app/zurich-base/main/default/objects/EmailsIBA__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Email subject</description>
    <label>Asunto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>